--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Blog from '../components/Blog.astro';
 
 <Layout title="Welcome to Trans Swift.">
 	<main class="space-y-40 mb-40">
-		<HeroSection/> <!-- 1  -->
+		<HeroSection/> <!-- If the component loads and does not view  ....ps. i was high -->
 		<Features/>
 		<Stats/>
 		<CallToAction/>
